# EdgeWatch

./: .gitignore  README.md
backend-dotnet/EdgeWatch.Api/: EdgeWatch.Api.csproj  EdgeWatch.Api.http  Program.cs
backend-dotnet/EdgeWatch.Api/Data/: AppDbContext.cs
backend-dotnet/EdgeWatch.Api/Models/: Alert.cs  DeviceData.cs
backend-dotnet/EdgeWatch.Api/Properties/: launchSettings.json
engine/: CMakeLists.txt  helgrind.supp
engine/include/: Alert.hpp  AlertLogger.hpp  ApiClient.hpp  Data.hpp  Device.hpp  EventManager.hpp  HttpClient.hpp  Observer.hpp  Process.hpp  Queue.hpp
engine/src/: AlertLogger.cpp  ApiClient.cpp  Device.cpp  EventManager.cpp  HttpClient.cpp  Process.cpp  Queue.cpp  main.cpp
interface/: CMakeLists.txt  Main.qml  main.cpp
